# gemma4_comp

./: .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.demo  Dockerfile.dev  Makefile  README.md  RESULTS.md  SECURITY.md  _align_titles.py  _audit_results.json  _inject_200.py  _inject_at_a_glance.py  _kernel_mapping.json  _url_diff.txt  copy_framework.py  copy_reference.py  docker-compose.auth.yml  docker-compose.dev.yml  docker-compose.yml  local_gemma_results.json  mkdocs.yml  pyproject.toml  repomix.config.json  requirements-docs.txt  requirements.txt
.claude/: settings.local.json
.devcontainer/: devcontainer.json  setup.sh
configs/: README.md
data/: _curated_drive_blob.txt  _trusted_sources_snippet.py  baseline_report.html  chat_viewer.html  curated_test_set.json  curated_test_set.partial.json  curated_test_set_report.md  curated_test_set_smoke.json  curated_test_set_smoke.partial.json  curated_test_set_smoke_report.md  curriculum_demo_TAYLOR-001.json  drive_cross_bundle.md  drive_curated_cluster_aware.json  drive_curated_connected.json  drive_curated_file_ids.json  drive_doc_clusters.json  drive_doc_embeddings.npz  drive_entities.json  drive_entities_v2.json  drive_hypothesis_edges.json  drive_image_ocr_report.md  drive_manifest_summary.md  drive_waterfall_report.md  gemma_baseline_findings.json  nb19_classification_v2.json  nb19_classification_v3.json  oss_notebook_prompts.jsonl
docs/: CHECKPOINT_2026-04-18.md  CHECKPOINT_2026-04-19.md  COMPLIANCE.md  EXTENDING.md  FAQ.md  FOR_JUDGES.md  REPORT_CARD.md  android_app_architecture.md  anonymization_policy.md  architecture.md  authors_notes.md  bench_and_tune_readiness.md  claude_code_integration.md  cloud_deployment.md  comparison_to_alternatives.md  compatibility.md  containers.md  contributing_prompts.md  corpus_coverage.json  corpus_coverage.md  corpus_stats.md  cross_ngo_trends_federation.md  current_kaggle_notebook_state.md  deployment_enterprise.md  deployment_local.md  deployment_modes.md  deployment_topologies.md  duecare_adversarial_audit.md  duecare_app_launch_guide.md  ecosystem_overview.md  educator_resources.md  embedding_guide.md  enterprise_readiness.md  extension_pack_format.md  first_deployer_feedback.md  gemma4_model_guide.md  harness_lift_data.json  harness_lift_report.md  index.md  install.md  (+37 more)
hf-space/: DEPLOYMENT.md  Dockerfile  README.md  start.sh
infra/: README.md
kaggle/: README.md  _INDEX.md  duecare_demo_kernel.py
notebooks/: 000_index.ipynb  005_glossary.ipynb  00_gemma_exploration.ipynb  00a_prompt_prioritizer.ipynb  00b_prompt_remixer.ipynb  015_background_literature.ipynb  01_quickstart.ipynb  020_current_events.ipynb  02_cross_domain_proof.ipynb  03_agent_swarm_deep_dive.ipynb  04_submission_walkthrough.ipynb  06_adversarial_resistance.ipynb  09_llm_judge_grading.ipynb  100_gemma_exploration.ipynb  102_gemma_e2b_baseline.ipynb  105_prompt_corpus_introduction.ipynb  10_conversation_testing.ipynb  110_prompt_prioritizer.ipynb  120_prompt_remixer.ipynb  12_prompt_factory.ipynb  140_evaluation_mechanics.ipynb  14_results_dashboard.ipynb  150_free_form_gemma_playground.ipynb  152_interactive_gemma_chat.ipynb  155_tool_calling_playground.ipynb  160_image_processing_playground.ipynb  170_live_context_injection_playground.ipynb  182_refusal_direction_visualizer.ipynb  184_frontier_consultation_playground.ipynb  188_jailbreak_uncensored_community.ipynb  189_jailbreak_cracked_31b.ipynb  190_rag_retrieval_inspector.ipynb  199_free_form_exploration_conclusion.ipynb  200_cross_domain_proof.ipynb  210_oss_model_comparison.ipynb  220_ollama_cloud_comparison.ipynb  230_mistral_family_comparison.ipynb  240_openrouter_frontier_comparison.ipynb  245_gemini_api_comparison.ipynb  250_comparative_grading.ipynb  (+27 more)
reports/: 20260411160443_unknown_rapid_probe.md  20260415122242763251_0649df56_rapid_probe.md  test_run_001.md
scripts/: README.md  _analyze_drive_text.py  _analyze_drive_waterfall.py  _canonical_notebook.py  _compress_trusted_sources_in_deliverable.py  _enumerate_drive_folders.py  _jailbreak_cells.py  _notebook_display.py  _ocr_drive_images.py  _public_slugs.py  _push_pending_playgrounds.sh  _splice_final.py  _splice_trusted_sources.py  _test_drive_ingestion.py  _validate_000_adversarial.py  _validate_005_adversarial.py  _validate_010_adversarial.py  _validate_100_adversarial.py  _validate_105_adversarial.py  _validate_110_adversarial.py  _validate_120_adversarial.py  _validate_130_adversarial.py  _validate_140_adversarial.py  _validate_150_adversarial.py  _validate_155_adversarial.py  _validate_160_adversarial.py  _validate_170_adversarial.py  _validate_180_adversarial.py  _validate_190_adversarial.py  _validate_200_adversarial.py  _validate_210_adversarial.py  _validate_220_adversarial.py  _validate_230_adversarial.py  (+155 more)
tests/: README.md  (+1 more)
(+1086 files in other folders)
